test/org/midica/testfiles/failing/eff-func-msb-too-high.midica
INCLUDE inc/instruments.midica


0: vol.double.set(128/30)
